--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   firebase_messaging: any
   cloud_firestore: ^0.12.5+1
   cloud_functions: any
-
+  shared_preferences: any
+  sqflite: any
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
