管理画面の登録文字表示

--- a/websites/package.json
+++ b/websites/package.json
@@ -7,6 +7,10 @@
     "@types/node": "12.11.5",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "firebase-admin": "^8.7.0",
+    "firebase-functions": "^3.3.0",
+    "http2": "^3.3.7",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
