--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   sqflite: any
   fluttertoast: ^3.1.3
 
+  auto_size_text: any
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
