--- a/websites/package.json
+++ b/websites/package.json
@@ -7,12 +7,15 @@
     "@types/node": "12.11.5",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "@types/react-router-dom": "^5.1.3",
+    "firebase": "^7.5.0",
     "firebase-admin": "^8.7.0",
     "firebase-functions": "^3.3.0",
     "http2": "^3.3.7",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
