--- a/websites/package.json
+++ b/websites/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.19",
+    "@types/kuromoji": "^0.1.0",
     "@types/node": "12.11.5",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
@@ -12,6 +13,7 @@
     "firebase-admin": "^8.7.0",
     "firebase-functions": "^3.3.0",
     "http2": "^3.3.7",
+    "kuromoji": "^0.1.2",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
