--- a/websites/public/manifest.json
+++ b/websites/public/manifest.json
@@ -16,6 +16,16 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "yadon_pc.jpg",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+    {
+      "src": "yadon_sp.jpg",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
