--- a/websites/firebase.json
+++ b/websites/firebase.json
@@ -1,6 +1,16 @@
 {
   "hosting": {
     "public": "build",
+    "rewrites": [
+      {
+        "source": "/public/**",
+        "destination": "/public.html"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
