--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,16 +22,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: any
 
-  google_sign_in: ^4.0.2
-  firebase_auth: ^0.11.1+6
-  firebase_messaging: any
-  cloud_firestore: ^0.12.5+1
+  firebase_auth: any
+  cloud_firestore: any
   cloud_functions: any
-  shared_preferences: any
-  sqflite: any
-  fluttertoast: ^3.1.3
 
   auto_size_text: any
 
